--- a/Layout.master
+++ b/Layout.master
@@ -80,25 +80,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <div class="col-md-6 top-middle" style="margin-top: 10px; padding-right: 11px">
                                 <ul>
                                     <li><a href="UserProfile.aspx" style="color: #FFF"><i class="fa fa-user" style="margin-right: 8px"></i>
-                                        <asp:Label ID="lblProfile" runat="server"></asp:Label></a>
+                                        <asp:Label ID="lblProfile" runat="server" ToolTip="Profile"></asp:Label></a>
                                     </li>
-                                    <li><a href="index.aspx"><i class="fa fa-power-off"></i></a></li>
-                                </ul>
-                                <%--<ul>
-                                    <li class="dropdown profile_details_drop">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                            <div class="profile_img">
-                                                <span class="prfil-img"><i class="fa fa-user" aria-hidden="true"></i></span>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </a>
-                                        <ul class="dropdown-menu drp-mnu">
-                                            <li><a href="#"><i class="fa fa-cog"></i>Settings</a> </li>
-                                            <li><a href="#"><i class="fa fa-user"></i>Profile</a> </li>
-                                            <li><a href="#"><i class="fa fa-sign-out"></i>Logout</a> </li>
-                                        </ul>
-                                    </li>
-                                </ul>--%>
+                                    <li><a href="index.aspx" title="Logout"><i class="fa fa-power-off"></i></a></li>
+                                </ul>                                
                             </div>
                             <div class="clearfix"></div>
 
@@ -121,13 +106,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                                         <nav class="cl-effect-15" id="cl-effect-15">
                                             <ul class="nav navbar-nav">
-                                                <li class="active"><a href="Dashboard.aspx">Dashboard</a></li>
-                                                <%-- <li><a href="about.html">User</a></li>
-                                                <li><a href="services.html">Lead</a></li>
-                                                <li><a href="gallery.html">Reports</a></li>--%>
-                                                <li class="dropdown">
+                                                <li class="active"><a href="Dashboard.aspx">Dashboard</a></li>                                               
+                                                <li class="dropdown" id="ulUser" runat="server">
                                                     <a href="#" class="dropdown-toggle" data-hover="Users" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
-                                                    <ul class="dropdown-menu">
+                                                    <ul class="dropdown-menu" >
                                                         <li><a href="NewUser.aspx">New User</a></li>
                                                         <li><a href="UserList.aspx">Users List</a></li>
                                                         <li><a href="ResetPassword.aspx">Password Reset</a></li>
@@ -143,11 +125,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 <li class="dropdown">
                                                     <a href="#" class="dropdown-toggle" data-hover="Leads" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leads <span class="caret"></span></a>
                                                     <ul class="dropdown-menu">
-                                                        <%--<li><a href="NewLead.aspx">New Lead</a></li>--%>
-
-                                                        <li><a href="LeadAllocation.aspx">Lead Allocation</a></li>
+                                                        <li id="liLeadAllocation" runat="server"><a href="LeadAllocation.aspx">Lead Allocation</a></li>
                                                         <li><a href="AllLeadsList.aspx">All Leads</a></li>
-                                                        <li><a href="UserLeadList.aspx">Your Leads</a></li>
+                                                        <li><a href="UserLeadList.aspx">My Leads</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="dropdown">
@@ -155,9 +135,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     <ul class="dropdown-menu">
                                                         <li><a href="LeadsList.aspx">All Leads</a></li>
                                                         <li><a href="CustomerList.aspx">All Customers</a></li>
-                                                        
-                                                        <%-- <li><a href="typography.html">Open Leads Reports</a></li>
-                                                        <li><a href="typography.html">Service wise Reports</a></li>--%>
                                                     </ul>
                                                 </li>
 
