Changes For Notes and FollowupDate

--- a/Layout.master
+++ b/Layout.master
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                             <div class="col-md-6 top-middle" style="margin-top: 10px; padding-right: 11px">
                                 <ul>
-                                    <li><a href="UserProfile.aspx" style="color: #FFF"><i class="fa fa-user" style="margin-right: 8px"></i>
+                                    <li><a href="UserProfile.aspx" style="color: #FFF"><i class="fa fa-user" title="Profile" style="margin-right: 8px"></i>
                                         <asp:Label ID="lblProfile" runat="server" ToolTip="Profile"></asp:Label></a>
                                     </li>
                                     <li><a href="index.aspx" title="Logout"><i class="fa fa-power-off"></i></a></li>
