--- a/Layout.master
+++ b/Layout.master
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <!--<h1><a class="navbar-brand" href="index.html"><img src="images/NEDBANK_logo_RGB_hr.png" style="width:100px" /></a></h1>-->
                                     </div>
                                     <!-- Collect the nav links, forms, and other content for toggling -->
-                                    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+                                    <div class="collapse navbar-collapse navbar-left" id="bs-example-navbar-collapse-1">
                                         <nav class="cl-effect-15" id="cl-effect-15">
                                             <ul class="nav navbar-nav">
                                                 <li class="active"><a href="Dashboard.aspx">Dashboard</a></li>                                               
