--- a/Layout.master
+++ b/Layout.master
@@ -135,6 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     <ul class="dropdown-menu">
                                                         <li><a href="LeadsList.aspx">All Leads</a></li>
                                                         <li><a href="OpenLeadList.aspx">Open Leads</a></li>
+                                                        <li><a href="ServiceWiseReport.aspx">Service-Wise Lead Reports</a></li>
                                                     </ul>
                                                 </li>
 
